--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -17,23 +17,25 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/caption_text"
+                android:id="@+id/main_instr_nav"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:typeface="sans" />
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="30dp"
+                android:typeface="sans"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center" >
-
-                <TextView
-                    android:id="@+id/result_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/main_instr_panel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="40dp"
+                android:layout_marginStart="30dp"
+                android:typeface="sans"
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </FrameLayout>
 </android.support.wearable.view.BoxInsetLayout>
